[FIX] z-index property on choose theme container

--- a/styles/modules/_sections.scss
+++ b/styles/modules/_sections.scss
@@ -69,6 +69,7 @@ header {
       flex-direction: column;
       align-items: center;
       margin: 0.8rem 0;
+      z-index: 5;
     }
 
     &-theme-options-container {
